updated devcontainer config

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -29,9 +29,9 @@ services:
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    env_file:
+    env_file: devcontainer.env
       # Ensure that the variables in .env match the same variables in devcontainer.json
-      - .env
+      
 
 
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
