--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    env_file: devcontainer.env
+    env_file: .env
       # Ensure that the variables in .env match the same variables in devcontainer.json
       
 
