got psq to create table but no to store it

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -29,7 +29,8 @@ services:
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    env_file: .env
+    env_file: 
+      - .env
       # Ensure that the variables in .env match the same variables in devcontainer.json
       
 
