--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -30,10 +30,13 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     env_file: 
-      - .env
+      #- .env
       # Ensure that the variables in .env match the same variables in devcontainer.json
       
-
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: postgres
 
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
