--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,13 +8,15 @@
 	
 	"features": {
 		"ghcr.io/devcontainers/features/common-utils:2": {},
-		"ghcr.io/devcontainers/features/go:1": {"version": "1.20"},
+		"ghcr.io/devcontainers/features/go:1": {},
 		"ghcr.io/devcontainers-contrib/features/etcd:1": {},
 		"ghcr.io/devcontainers-contrib/features/redis-homebrew:1": {},
 		"ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {},
 		"ghcr.io/warrenbuckley/codespace-features/sqlite:1": {},
 		"ghcr.io/devcontainers/features/sshd:1": {},
-		"ghcr.io/devcontainers/features/github-cli:1": {}
+		"ghcr.io/devcontainers/features/github-cli:1": {},
+		"ghcr.io/devcontainers-contrib/features/npm-package:1": {},
+		"ghcr.io/devcontainers/features/node:1": {}
 	},
 
     // Features to add to the dev container. More info: https://containers.dev/features.
