--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -26,11 +26,11 @@ services:
 
   db:
     image: postgres:latest
-    restart: unless-stopped
+    restart: always
     volumes:
       - postgres-data:/var/lib/postgresql/data
     env_file: 
-      - .env
+      - psgrs.env
       # Ensure that the variables in .env match the same variables in devcontainer.json
       
     #environment:
@@ -41,3 +41,4 @@ services:
 
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
+
